# ConveyorSimulator

./: CMakeLists.txt  README.md
include/: AlarmManager.h  ConfigLoader.h  Conveyor.h  EventLogEntry.h  ItemType.h  MachineController.h  MachineState.h  MainWindow.h  Sensor.h  SimulationEngine.h  SorterGate.h
src/: AlarmManager.cpp  ConfigLoader.cpp  Conveyor.cpp  MachineController.cpp  MainWindow.cpp  Sensor.cpp  SimulationEngine.cpp  SorterGate.cpp  main.cpp
tests/: AlarmManagerTests.cpp  ConveyorSystemTests.cpp  MachineControllerTests.cpp  SensorTests.cpp  SimulationEngineTests.cpp
